[gd_scene load_steps=8 format=2]

[ext_resource path="res://cridets.gd" type="Script" id=1]
[ext_resource path="res://sprits/backgrownd.png" type="Texture" id=2]
[ext_resource path="res://assets/GUI/label_HP_bg.png" type="Texture" id=3]
[ext_resource path="res://assets/font/Comfortaa-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://sprits/sprits/back.png" type="Texture" id=5]
[ext_resource path="res://assets/sound/10 - The Empire.ogg" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 90
font_data = ExtResource( 4 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 971.031, 613.024 )
scale = Vector2( 1.15859, 1.11439 )
texture = ExtResource( 2 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 78.0
margin_top = 64.0
margin_right = 1869.0
margin_bottom = 1144.0
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 251.549
margin_top = 107.292
margin_right = 1705.55
margin_bottom = 1154.29
custom_fonts/font = SubResource( 1 )
text = "CREDITS:

PROGRAMING:  Abdelilah Majid

ART: Abdelilah Majid
         and  (imported assets) 

SOUND: Abdelilah Majid 
                and (imported assets)
                "

[node name="back" type="TextureButton" parent="."]
margin_left = 1305.68
margin_top = 1053.4
margin_right = 1774.68
margin_bottom = 1176.4
texture_normal = ExtResource( 5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true
[connection signal="mouse_entered" from="back" to="." method="_on_back_mouse_entered"]
[connection signal="mouse_exited" from="back" to="." method="_on_back_mouse_exited"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
